2000-11-27  Tom Tromey  <tromey@cygnus.com>

	* library/debug.tcl (logfile): Also recognize stderr.

2000-07-12  Syd Polk  <spolk@redhat.com>

	* library/Makefile.am: Only regenerate tclIndex and pkgIndex.tcl
	if this is configured with --enable-maintainer-mode.

2000-07-11  Mo DeJong  <mdejong@redhat.com>

	* README:
	* library/Makefile.am:
	* library/Makefile.in:
	* library/tclIndex:
	* library/tree.tcl:
	* library/treetable.tcl:
	* src/Makefile.am:
	* src/Makefile.in:
	* src/guitcl.h:
	* src/tkTreeTable.c:
	* src/tkTreeTable.h: Moved implementation of
	"treetable" command out back into snavigator.

2000-07-06  Mo DeJong  <mdejong@redhat.com>

	* library/debug.tcl (logfile): Use non-blocking IO.
	* library/tree.tcl (set_column_filter, bind, exchange,
	ide_treetable): Don't fully qualify global commands.
	Use itcl::delete. Use non-blocking IO. Rename bind
	method to __bind. Brace exprs. Set default value
	for when_post_menu variable. Itcl 3.0 fixups.

2000-06-30  Mo DeJong  <mdejong@redhat.com>

	* library/tree.tcl: Fix typo made in patch
	from 2000-06-22.

2000-06-30  Syd Polk  <spolk@cygnus.com>

	* src/paths.c: Chris Faylor's path changes from 2000-06-09 blow
	out MSVC's stupid path limitation. This is only a problem
	for Source-Navigator.

2000-06-22  Mo DeJong  <mdejong@redhat.com>

	* library/tree.tcl: Remove use of watch
	command. Add check to see if toplevel
	exists to avoid error.

2000-06-22  Mo DeJong  <mdejong@redhat.com>

	* src/tkGraphCanvas.c (GetEdgeNodes): Fixed
	crash in ckfree caused by call to strdup that
	was later freed using ckfree.

2000-06-19  Syd Polk  <spolk@redhat.com>

	* configure.in: Use CYG_AC_PATH_ITCLCONFIG and CYG_AC_LOAD_ITCLCONFIG
	instead of using exising itclsh.
	* aclocal.m4: Regenerated with new ../config/acinclude.m4.
	* configure: Regenerate.
	* Makefile.in library/Makefile.in src/Makefile.in: Regenerate.

Fri Jun  9 20:43:40 2000  Christopher Faylor <cgf@cygnus.com>
